# TacticalGameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  TacticalGameEngine.code-workspace
TacticalGameEngine/: CMakeLists.txt  TacticalGameEngine.cpp  TacticalGameEngine.h
TacticalGameEngine/src/adapters/editor/: IEditorAction.h  editor-state.h  menu-components.cpp  menu-components.h
TacticalGameEngine/src/adapters/editor/actions/: create-item-action.h  create-unit-action.h  exit-app-action.h  load-project-action.h  manage_inventory_action.h  place-item-action.h  place-unit-action.h  resize-map-action.h  run-simulation-action.h  save-project-action.h
TacticalGameEngine/src/adapters/runtime_ui/: game-state-presenter.cpp  game-state-presenter.h  game-terminal-presenter.cpp  game-terminal-presenter.h
TacticalGameEngine/src/adapters/shared/: editor-menu.cpp  editor-menu.h  state-manager.cpp  state-manager.h
TacticalGameEngine/src/core/: CMakeLists.txt
TacticalGameEngine/src/core/interfaces/: IGamePresenter.h  ILogger.h  IProjectRepository.h
TacticalGameEngine/src/core/models/: item.h  map.h  project.h  unit.cpp  unit.h
TacticalGameEngine/src/core/runtime/: game-engine.cpp  game-engine.h
TacticalGameEngine/src/core/utils/: id-generator.cpp  id-generator.h
TacticalGameEngine/src/infrastcructure/: CMakeLists.txt
TacticalGameEngine/src/infrastcructure/logging/: logger.h  logger_file.h  logger_ftxui.h
TacticalGameEngine/src/infrastcructure/persistance/: json_project_repository.cpp  json_project_repository.h
